@@ -1,9 +1,9 @@
 package com.berg.service;
 
 import com.berg.dto.RecipeCreateDto;
-import com.berg.mapper.RecipeCreateMapper;
-import com.berg.mapper.RecipeReadDto;
-import com.berg.mapper.RecipeReadMapper;
+import com.berg.dto.RecipeReadDto;
+import com.berg.mapper.RecipeCreateDtoToRecipeMapper;
+import com.berg.mapper.RecipeToRecipeReadDtoMapper;
 import com.berg.repositary.RecipeRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -12,44 +12,41 @@ import org.springframework.transaction.annotation.Transactional;
 import java.util.List;
 import java.util.Optional;
 
-import static java.util.stream.Collectors.toList;
-
 @Service
 @Transactional(readOnly = true)
 @RequiredArgsConstructor
 public class RecipeService {
 
     private final RecipeRepository recipeRepository;
-    private final RecipeCreateMapper recipeCreateMapper;
-    private final RecipeReadMapper recipeReadMapper;
+    private final RecipeCreateDtoToRecipeMapper recipeCreateDtoToRecipeMapper;
+    private final RecipeToRecipeReadDtoMapper recipetoRecipeReadDtoMapper;
 
     public List<RecipeReadDto> findAll() {
         return recipeRepository.findAll().stream()
-                .map(recipeReadMapper::map)
-                .collect(toList());
+                .map(recipetoRecipeReadDtoMapper::map)
+                .toList();
     }
 
     public Optional<RecipeReadDto> findById(Long id) {
         return recipeRepository.findById(id)
-                .map(recipeReadMapper::map);
+                .map(recipetoRecipeReadDtoMapper::map);
     }
 
     @Transactional
     public RecipeReadDto create(RecipeCreateDto recipeDto) {
-        var recipeEntity = recipeCreateMapper.map(recipeDto);
         return Optional.of(recipeDto)
-                .map(recipeCreateMapper::map)
+                .map(recipeCreateDtoToRecipeMapper::map)
                 .map(recipeRepository::save)
-                .map(recipeReadMapper::map)
+                .map(recipetoRecipeReadDtoMapper::map)
                 .orElseThrow();
     }
 
     @Transactional
     public Optional<RecipeReadDto> update(Long id, RecipeCreateDto recipeDto) {
         return recipeRepository.findById(id)
-                .map(recipe -> recipeCreateMapper.map(recipeDto, recipe))
+                .map(recipe -> recipeCreateDtoToRecipeMapper.map(recipeDto, recipe))
                 .map(recipeRepository::saveAndFlush)
-                .map(recipeReadMapper::map);
+                .map(recipetoRecipeReadDtoMapper::map);
     }
 
     public boolean delete(Long id) {
